# clavator

./: .gitignore  .travis.yml  README.md  app.yaml  jest.unit.js  package.json  react-compat.js  rollup.config.js  tsconfig.json  tslint.json  webpack.config.js
.circleci/: config.yml
image/: Dockerfile  Dockerfile-create-clavator  Dockerfile-create-os-images  arch-aarch64.sh  arch-arm.sh  arch-update.sh  bigplan  build-clavator.sh  build-docker-x86_64.sh  build-gnupg-aarch64.sh  build-gnupg-arm.sh  build-gnupg-x86_64.sh  builder-old.sh  builder.js  builder.sh  clavator-docker-load.sh  clavator.rb  construqt.rb  create-clavator-docker-container.sh  create-clavator-docker.sh  create-clavator-node.sh  create-clavator-os-image-aarch64-odroid-c2.sh  create-clavator-os-image-aarch64-odroid_c2.sh  create-clavator-os-image-arm-odroid-c1.sh  create-clavator-os-image-arm-odroid-xu3.sh  create-clavator-os-image-arm-odroid_c1.sh  create-clavator-os-image-arm-odroid_xu3.sh  create-clavator-os-image-arm-rpi23.sh  create-clavator-os-image-x86_64-pc.sh  create-clavator-os-images.sh  create-clavator.sh  create-cleanup-disk.sh  create-docker-archlinux-aarch64.sh  create-docker-archlinux-arm.sh  create-docker-archlinux-updater.sh  create-docker-archlinux-x86_64.sh  create-docker-archlinux.sh  create-gnupg-aarch64.sh  create-gnupg-arm.sh  create-gnupg.sh  (+41 more)
image/archlinux/: Dockerfile
image/builder/: Dockerfile  builder.sh  odroid-c1.sh  odroid-c2.sh  odroid-xu3.sh  rpi23.sh  run.sh
image/odroid-c2/: Dockerfile  builder.sh
image/rpi/: Dockerfile  Vagrantfile  createImage.sh
image/rpi23/: Dockerfile  builder.sh
pam/: CMakeLists-cascara.txt  CMakeLists-easyloggingpp.txt  CMakeLists.txt  compile  matcher.hpp  pam_clavator.cpp  pem_ssh.hpp  pin_entry_dispatcher.hpp  pinentry.cpp  run_as.hpp  ssh_authorized_keys.hpp  system_cmd.hpp
pam/src/: agent.hpp  asn1.hpp  base64.hpp  config.hpp  during_exec.hpp  file_descriptor.hpp  gpg_agent_conf.hpp  gpg_card_status.hpp  gpg_keyinfo_list.hpp  gpg_list_secret_keys.hpp  launchd_plist.hpp  matcher.hpp  oid.hpp  option.hpp  optional_password.hpp  pam_clavator.cpp  pam_clavator_agent.cpp  pem.cpp  pem.hpp  pin_entry_dispatcher.hpp  pinentry.cpp  pipe.hpp  pipe_action.hpp  pipe_writer.cpp  pipe_writer.hpp  run_as.hpp  socket.hpp  ssh_authorized_keys.hpp  system_cmd.hpp  system_result.hpp
pam/test/: CMakeLists.txt  test_asn1.cpp  test_cert_match_ssh_auth.cpp  test_gpg_card_status.cpp  test_keyinfo_list.cpp  test_list_secret_keys.cpp  test_oid.cpp  test_pem.cpp  test_socket.cpp  test_ssh_authorized_keys.cpp  test_system_cmd.cpp
src/: client.tsx  delete_secret_key.ts  dispatch.ts  dispatcher.ts  gpg-change-card.ts  gpg-mock.ts  gpg_card_status_observer.ts  gpg_change_pin_yubikey.ts  gpg_create_key_set.ts  gpg_list_secret_keys_observer.ts  gpg_reset_yubikey.ts  message.ts  observer.ts  progress.ts  request_ascii.ts  request_ascii_dispatcher.ts  respond_ascii.ts  send_key_to_yubikey.ts  server.ts  wss_update.ts
src/dice-ware/: dice-ware.ts  index.ts
src/gpg/: agent-conf.ts  agent_conf.ts  approvable-part.ts  approvable-warrent.ts  approvable-warrents.ts  boolean-value.ts  card-status.ts  card_status.ts  change-card.ts  change_card.ts  container.ts  create-key-set.ts  create_key.ts  create_key_set.ts  date-value.ts  gpg-cmds.ts  gpg-version.ts  gpg.ts  helper.ts  index.ts  key-gen-uid.ts  key-gen.ts  key-params.ts  key-state.ts  key-to-yubikey.ts  key_state.ts  list-secret-keys.ts  list_secret_keys.ts  multi-option.ts  mutable_string.ts  option.ts  pallet.ts  part.ts  pass-phrase.ts  pin.ts  reg-min-max-warrent.ts  request-change-pin.ts  request_ascii.ts  request_change_pin.ts  result.ts  (+6 more)
src/gpg-mock/: agent.ts  card-status.ts  full-gen-key.ts  gpg-mock-state.ts  gpg-mock.ts  index.ts  list-secret-keys.ts  simple-actions.ts
src/model/: boolean-value.ts  (+18 more)
test/: all.ts  date-value.test.ts  safe-raf.ts  setup.js  test_agent_conf.ts  test_list_secret_keys.ts  test_master_keys.ts
(+213 files in other folders)
